backend.log
nohup: ignoring input
/data/data/com.termux/files/home/Buzzanator_FDF/buzzflow-cli/backend/server.js:10
app.get('/health', (req# 1. Go to base Buzz repo
                       ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1669:18)
    at Module._compile (node:internal/modules/cjs/loader:1712:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1871:10)
    at Module.load (node:internal/modules/cjs/loader:1470:32)
    at Module._load (node:internal/modules/cjs/loader:1290:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:238:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.7.0
